@@ -1,3 +1,8 @@
+2002-11-05  Theodore A. Roth  <troth@openavr.org>
+
+	* configure.in (AM_INIT_AUTOMAKE): Bump version.
+	* include/avr/iom8.h: Sync up with latest datasheet (2486H-AVR-09/02).
+
 2002-11-04  Theodore A. Roth  <troth@openavr.org>
 
 	* doc/api/Makefile.am: Fix all pngs to have proper transparency.
